crates/parser/src/snapshots/parser__tests__parse_inline_ok@0123_match_leading_pipe.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo { | bar => 1 }\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0123_match_leading_pipe.ath
---
INFIX_MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_ARM
    PIPE "|"
    WHITESPACE " "
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "1"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

