crates/parser/src/snapshots/parser__tests__parse_inline_ok@0132_cases_infer_block.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatype-cases { (!claim A) } { foo => (!claim foo) | bar => (!claim bar) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0132_cases_infer_block.ath
---
CASES_DED
  DATATYPE_CASES_KW "datatype-cases"
  WHITESPACE " "
  INFER_BLOCK_DED
    L_CURLY "{"
    WHITESPACE " "
    MAYBE_NAMED_INFERENCE
      INFERENCE
        BANG_METHOD_CALL_DED
          L_PAREN "("
          BANG "!"
          IDENT_EXPR
            NAME_REF
              IDENT "claim"
          WHITESPACE " "
          IDENT_EXPR
            NAME_REF
              IDENT "A"
          R_PAREN ")"
    WHITESPACE " "
    R_CURLY "}"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      NAME
        IDENT "foo"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "foo"
      R_PAREN ")"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    PIPE "|"
    WHITESPACE " "
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "bar"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

