crates/parser/src/snapshots/parser__tests__parse_inline_ok@0135_infer_by.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A by B on C }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0135_infer_by.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      INFER_BY
        IDENT_EXPR
          NAME_REF
            IDENT "A"
        WHITESPACE " "
        BY_KW "by"
        WHITESPACE " "
        IDENT_EXPR
          NAME_REF
            IDENT "B"
        WHITESPACE " "
        ON_KW "on"
        WHITESPACE " "
        IDENT_EXPR
          NAME_REF
            IDENT "C"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

