crates/parser/src/snapshots/parser__tests__parse_inline_ok@0146_by_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(A by (!claim B))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0146_by_ded.ath
---
BY_DED
  L_PAREN "("
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  WHITESPACE " "
  BY_KW "by"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "B"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

