crates/parser/src/snapshots/parser__tests__parse_inline_ok@0151_define_prefix_proc.ath.snap
---
source: crates/parser/src/tests.rs
description: "(define (foo a b) (lambda () b))\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0151_define_prefix_proc.ath
---
PREFIX_DEFINE_BLOCKS
  L_PAREN "("
  DEFINE_KW "define"
  WHITESPACE " "
  PREFIX_DEFINE_BLOCK
    DEFINE_PROC
      L_PAREN "("
      NAME
        IDENT "foo"
      WHITESPACE " "
      NAME
        IDENT "a"
      WHITESPACE " "
      NAME
        IDENT "b"
      R_PAREN ")"
    WHITESPACE " "
    APPLICATION_EXPR
      L_PAREN "("
      LAMBDA_EXPR
        LAMBDA_KW "lambda"
        WHITESPACE " "
        L_PAREN "("
        R_PAREN ")"
        WHITESPACE " "
        IDENT_EXPR
          NAME_REF
            IDENT "b"
      R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

