crates/parser/src/snapshots/parser__tests__parse_inline_ok@0159_inference_no_from_by_on.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A := B }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0159_inference_no_from_by_on.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    MAYBE_WILDCARD_OP_ANNOTATED_PARAM
      NAME
        IDENT "A"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "B"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

