crates/parser/src/snapshots/parser__tests__parse_inline_ok@0163_prefix_assume_let_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(assume-let (x A) (!claim x))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0163_prefix_assume_let_ded.ath
---
PREFIX_ASSUME_LET_DED
  L_PAREN "("
  ASSUME_LET_KW "assume-let"
  WHITESPACE " "
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "x"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "A"
    R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "x"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

