crates/parser/src/snapshots/parser__tests__parse_inline_ok@0168_prefix_try.ath.snap
---
source: crates/parser/src/tests.rs
description: "(try (A B) C D)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0168_prefix_try.ath
---
PREFIX_TRY_EXPR
  L_PAREN "("
  TRY_KW "try"
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    IDENT_EXPR
      NAME_REF
        IDENT "A"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "B"
    R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "C"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "D"
  R_PAREN ")"
  WHITESPACE "\n"

