crates/parser/src/snapshots/parser__tests__parse_inline_ok@0189_overload_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "overload (== eq) (+ N.+) (- N.-)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0189_overload_dir.ath
---
OVERLOAD_MULTI
  OVERLOAD_KW "overload"
  WHITESPACE " "
  PHRASE_PAIR
    L_PAREN "("
    IDENT_EXPR
      NAME_REF
        IDENT "=="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "eq"
    R_PAREN ")"
  WHITESPACE " "
  PHRASE_PAIR
    L_PAREN "("
    IDENT_EXPR
      NAME_REF
        IDENT "+"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "N.+"
    R_PAREN ")"
  WHITESPACE " "
  PHRASE_PAIR
    L_PAREN "("
    IDENT_EXPR
      NAME_REF
        IDENT "-"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "N.-"
    R_PAREN ")"
  WHITESPACE "\n"

